--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -1,4 +1,7 @@
 \chapter{Physikalische Konstanten und Stoffeigenschaften}
+\label{appendix_constants}
+
+\footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
 
 \begin{table}[H]
   \centering
@@ -30,7 +33,7 @@
     Atomgewicht $u$                          & \SI{196.967}{\gram\per\mole}                   & \cite{haynes_crc_2011} S.4-65   \\
     Kristallstruktur                         & fcc                                            & \cite{haynes_crc_2011} S.4-147  \\
     Gitterkonstante $a$                      & \SI{4.0786}{\angstrom}                         & \cite{haynes_crc_2011} S.4-147  \\
-    Bindungslänge $r_\text{bond}$            & \SI{2.8840}{\angstrom}                         & abgeleitet                      \\
+    Bindungslänge $r_\text{bond}$            & \SI{2.8840}{\angstrom}                         & berechnet\footnotemark[1]       \\
     Linearer Ausdehnungskoeffizient $\alpha$ & \SI{14.2e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
     \hline
   \end{tabular}
@@ -50,7 +53,7 @@
     Atomgewicht $u$                          & \SI{63.546}{\gram\per\mole}                    & \cite{haynes_crc_2011} S.4-61   \\
     Kristallstruktur                         & fcc                                            & \cite{haynes_crc_2011} S.4-146  \\
     Gitterkonstante $a$                      & \SI{3.6150}{\angstrom}                         & \cite{haynes_crc_2011} S.4-146  \\
-    Bindungslänge $r_\text{bond}$            & \SI{2.5562}{\angstrom}                         & abgeleitet                      \\
+    Bindungslänge $r_\text{bond}$            & \SI{2.5562}{\angstrom}                         & berechnet\footnotemark[1]       \\
     Linearer Ausdehnungskoeffizient $\alpha$ & \SI{16.5e-6}{\per\kelvin}                      & \cite{haynes_crc_2011} S.12-206 \\
     \hline
   \end{tabular}
@@ -85,8 +88,10 @@
     Atomgewicht $u$               & \SI{28.086}{\gram\per\mole}                 & \cite{haynes_crc_2011} S.4-87  \\
     Kristallstruktur              & diamant                                     & \cite{haynes_crc_2011} S.4-151 \\
     Gitterkonstante $a$           & \SI{5.4305}{\angstrom}                      & \cite{haynes_crc_2011} S.4-151 \\
-    Bindungslänge $r_\text{bond}$ & \SI{2.3515}{\angstrom}                      & abgeleitet                     \\
+    Bindungslänge $r_\text{bond}$ & \SI{2.3515}{\angstrom}                      & berechnet\footnotemark[1]      \\
     \hline
   \end{tabular}
 
 \end{table}
+
+\footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
