--- a/literature.bib
+++ b/literature.bib
@@ -1528,24 +1528,6 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	file = {APS Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SBDZPCGW/PhysRevB.62.html:text/html;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/PPUK8ZQX/Everitt et al. - 2000 - Evolution of a preferred orientation of polycrysta.pdf:application/pdf}
 }
 
-@article{miller_effect_2006,
-	title = {The effect of gold particle size on {AuAu} bond length and reactivity toward oxygen in supported catalysts},
-	volume = {240},
-	issn = {0021-9517},
-	url = {http://www.sciencedirect.com/science/article/pii/S0021951706001205},
-	doi = {10.1016/j.jcat.2006.04.004},
-	abstract = {Au catalysts with different metallic particle sizes and supported on silica, alumina, titania, zirconia, ceria, and niobia were prepared, and the reduced catalysts were characterized by {EXAFS} spectroscopy. As the {AuAu} coordination number decreased, the interatomic bond length decreased. The {AuAu} bond length contraction appears to be independent of the support type. A correlation between the dispersion of Pt catalysts determined by hydrogen chemisorption and the {EXAFS} {PtPt} coordination number was established and used to determine the dispersion of fully reduced Au catalysts. In addition, the Au particle size was estimated using a literature correlation of the {EXAFS} coordination number. For particles larger than about 40 Å, there was little change in the metallic bond length, whereas in catalysts with gold particles smaller than 30 Å, the {AuAu} distance decreased with decreasing particle size, with a maximum contraction of about 0.15 Å. Decreasing particle size also brought a decrease in the intensity of the white line of the {XANES} spectrum. Both the decrease in bond distance and white line intensity were consistent with an increase in the d-electron density of Au atoms in very small particles. Au particles smaller than about 30 Å were also reactive to air, leading to oxidation of up to 15\% of the atoms of the gold particles, depending on the size; larger particles were not oxidized. These oxidized Au atoms in small particles are suggested to be active for {CO} oxidation.},
-	number = {2},
-	urldate = {2014-11-10},
-	journal = {Journal of Catalysis},
-	author = {Miller, J. T. and Kropf, A. J. and Zha, Y. and Regalbuto, J. R. and Delannoy, L. and Louis, C. and Bus, E. and van Bokhoven, J. A.},
-	month = jun,
-	year = {2006},
-	keywords = {Au bond length contraction, Au catalyst preparation, Au catalysts, Au dispersion from {EXAFS}, Au {EXAFS}, Au on alumina, Au on ceria, Au on niobia, Au on silica, Au on titania, Au on zirconia, Au {XANES}, Particle size effect in Au catalysts, Pt {EXAFS}},
-	pages = {222--234},
-	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SUQMXTF2/Miller et al. - 2006 - The effect of gold particle size on AuAu bond leng.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/3AAVZWNH/S0021951706001205.html:text/html}
-}
-
 @article{wolf_investigation_2002,
 	title = {Investigation of long throw {PVD} of titanium films from polycrystalline targets with texture},
 	volume = {63},
@@ -1627,6 +1609,21 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	year = {2008},
 	pages = {158--206},
 	file = {9781847558794-00158:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5VA629KX/9781847558794-00158:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/V4UJKTUP/978-0-85404-465-8.html:text/html;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QXV6BZ97/978-0-85404-465-8.html:text/html}
+}
+
+@article{wong_beyond_2002,
+	title = {Beyond the conventional transistor},
+	volume = {46},
+	issn = {0018-8646},
+	doi = {10.1147/rd.462.0133},
+	abstract = {This paper focuses on approaches to continuing {CMOS} scaling by introducing new device structures and new materials. Starting from an analysis of the sources of improvements in device performance, we present technology options for achieving these performance enhancements. These options include high-dielectric-constant (high-k) gate dielectric, metal gate electrode, double-gate {FET}, and strained-silicon {FET}. Nanotechnology is examined in the context of continuing the progress in electronic systems enabled by silicon microelectronics technology. The carbon nanotube field-effect transistor is examined as an example of the evaluation process required to identify suitable nanotechnologies for such purposes.},
+	number = {2.3},
+	journal = {{IBM} Journal of Research and Development},
+	author = {Wong, H.-S.P.},
+	month = mar,
+	year = {2002},
+	pages = {133--168},
+	file = {IEEE Xplore Abstract Record:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/K8NQM6UC/articleDetails.html:text/html;Wong - 2002 - Beyond the conventional transistor.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/3456N3EH/Wong - 2002 - Beyond the conventional transistor.pdf:application/pdf}
 }
 
 @article{gottsche_uber_1956,
