--- a/runtime.tex
+++ b/runtime.tex
@@ -5,7 +5,7 @@ Für Parsivald-Simulationen ergeben sich verschiedene Einschränkungen, etwa in 
 Nachfolgend wird deshalb eine Laufzeitanalyse von Parsivald unter Berücksichtigung diverser Größen durchgeführt.
 
 Wie bei Laufzeitanalysen üblich, werden Laufzeiten mit $T$ bezeichnet und sollten nicht mit Temperaturen verwechselt werden.
-Weiterhin bezeichnet die \textit{Größe} des Simulationsraumes oder der MD-Box im folgenden die Breite oder Fläche des quadratischen Simulationsraumes, da die Laufzeit im Parsivald-Modell unabhängig von der Höhe der Schicht ist.
+Weiterhin bezeichnet die \textit{Größe} des Simulationsraumes oder der MD-Box nachfolgend die Fläche des Raumes anstatt des Volumens, da die Laufzeit im Parsivald-Modell unabhängig von der Höhe der Schicht ist.
 
 \subsection{Ereignis-Laufzeit $T_\text{E}$}
 
@@ -92,6 +92,7 @@ Durch Synchronisation von Hauptprozess und Workerpools bildet sich die parallele
 
 \begin{equation}
   T_p = T_\text{start} + \max\left(N_\text{E} T_\text{E}, \frac{N_\text{E} T_\text{MD}}{p-1}\right) \approx \frac{N_\text{E} T_\text{MD}}{p-1}
+  \label{eq:runtime}
 \end{equation}
 
 \subsection{Speedup $S_p$}
@@ -124,6 +125,7 @@ Somit ergibt sich für $p = p_\text{max,2}$ mit $E_\text{max} = 1$ eine ideale E
 %% \end{equation}
 
 \subsection{Auswertung der Laufzeitparameter}
+\label{runtimeanalysis}
 
 \todo{um ein paar Zeilen kürzen?}
 Die Parallelisierung von Parsivald-Simulationen lässt sich über die Größe der als quadratisch angenommen Simulationsräume $w_\text{sim}$, die Ereignis-Laufzeit $T_\text{E}$ und die MD-Laufzeit $T_\text{MD}$ beeinflussen.
@@ -131,7 +133,7 @@ Einen geringeren Einfluss haben die Größe der MD-Box $w_\text{MD}$ und die mit
 Im allgemeinen Fall muss ein Gleichgewicht zwischen $T_\text{E}$, $T_\text{MD}$, $w_\text{sim}$ und $p$ gefunden werden.
 
 Das Skalierungsverhalten von Parsivald teilt sich anhand der Raumgröße $w_\text{sim}$ in zwei Bereiche ein.
-Für ``kleine Räume'' $w_\text{sim} \le w_\text{eff}$ determiniert $p_\text{max,1}$ das Skalierungsverhalten, wohingegen für ``große Räume'' $w_\text{sim} \ge w_\text{eff}$ $p_\text{max,2}$ dominiert.
+Für \textit{kleine Räume} mit $w_\text{sim} \le w_\text{eff}$ determiniert $p_\text{max,1}$ das Skalierungsverhalten, wohingegen für \textit{große Räume} ($w_\text{sim} \ge w_\text{eff}$) $p_\text{max,2}$ dominiert.
 Die effiziente Raumgröße $\le w_\text{eff}$ entspricht dabei einer kritischen Raumgröße, an der ein Knick in den Abbildungen~\ref{fig:densitymaxsize},\ref{fix:workersbytime} und~\ref{fig:runtimebytime} erkennbar ist.
 
 Die effiziente Größe $w_\text{eff}$ lässt sich anhand der maximalen Workerdichte $\rho_\text{worker,max}$ bestimmen.
